--- a/index.html
+++ b/index.html
@@ -283,19 +283,19 @@
             <div class="group-members">
                 <div class="member">
                     <h4>Mathematics</h4>
-                    <p>[Your Name]</p>
+                    <p>[Mairaj Jafri & Seyed Mohsen Hashmi]</p>
                 </div>
                 <div class="member">
                     <h4>Arts</h4>
-                    <p>[Name]</p>
+                    <p>[Genevieve Lynch]</p>
                 </div>
                 <div class="member">
                     <h4>Japanese/Languages</h4>
-                    <p>[Name]</p>
+                    <p>[Shione Fukumoto]</p>
                 </div>
                 <div class="member">
-                    <h4>[Subject]</h4>
-                    <p>[Name]</p>
+                    <h4>[Dance]</h4>
+                    <p>[Wen-Chun Liu]</p>
                 </div>
             </div>
             <div class="problem-box">
@@ -601,4 +601,5 @@
         });
     </script>
 </body>
+
 </html>
