--- a/index.html
+++ b/index.html
@@ -283,19 +283,19 @@
             <div class="group-members">
                 <div class="member">
                     <h4>Mathematics</h4>
-                    <p>[Mairaj Jafri & Seyed Mohsen Hashmi]</p>
+                    <p>Mairaj Jafri & Seyed Mohsen Hashmi</p>
                 </div>
                 <div class="member">
                     <h4>Arts</h4>
-                    <p>[Genevieve Lynch]</p>
+                    <p>Genevieve Lynch</p>
                 </div>
                 <div class="member">
                     <h4>Japanese/Languages</h4>
-                    <p>[Shione Fukumoto]</p>
+                    <p>Shione Fukumoto</p>
                 </div>
                 <div class="member">
-                    <h4>[Dance]</h4>
-                    <p>[Wen-Chun Liu]</p>
+                    <h4>Dance</h4>
+                    <p>Wen-Chun Liu</p>
                 </div>
             </div>
             <div class="problem-box">
@@ -603,3 +603,4 @@
 </body>
 
 </html>
+
